- fixes for f_lab including tests - thanks @stphnlyd
- minimum Perl 5.10

1.006 2022-01-23
- fix t_xyz2lab - thanks @vadim-160102

1.005 2020-09-17
- eliminate // to keep 5.006 compat

1.004 2020-09-15
- re-release after deletion
- fix so works under Devel::Cover
- changes to 'extra'
- tweak intensity in the 'extra' map

v1.003
	- fix typo in Makefile.PL

v1.002
	- addition of pseudocolor mappings and the t_pc and t_pcp transforms
	- Improved documentation
	- addition of RGB combinatoric modifiers to named color tables
	

v1.001 - initial module release to git, 23 Feb 2017